--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -28,9 +28,19 @@ jobs:
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /home/runner/.docker/buildx/
-          key: ${{ runner.os }}-buildx-${{ hashFiles('project/.github/workflows/codacy.yml') }}
+          key: ${{ runner.os }}-buildx-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
+      - name: Cache Apt Packages
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: |
+            /var/cache/apt/archives/*.deb
+            /var/lib/apt/lists/*
+          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3.6.1
