--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -17,6 +17,7 @@ on:
       - "dvclive/**"
       - "LICENSE"
       - "notebooks/**"
+      - "packages-packaging.txt"
       - "params.yaml"
       - "README.md"
       - "reports/**"
@@ -32,6 +33,9 @@ concurrency:
 permissions:
   contents: write
 
+env:
+  PACKAGES: packages-packaging.txt
+
 jobs:
   package-repo:
     runs-on: ubuntu-latest
@@ -43,8 +47,20 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Cache Apt Packages
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: |
+            /var/cache/apt/archives/*.deb
+            /var/lib/apt/lists/*
+          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
       - name: Install System Dependencies
-        run: sudo apt-get install -y pigz zip
+        run: |
+          sudo apt-get update
+          sudo apt-get --yes install --no-install-recommends $(cat ${{ env.PACKAGES }})
 
       - name: Create File List
         run: |
