--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -28,11 +28,14 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Cache apt packages
+      - name: Cache Apt Packages
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: /var/cache/apt/archives
-          key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}-
+          path: |
+            /var/cache/apt/archives/*.deb
+            /var/lib/apt/lists/*
+            ! /var/lib/apt/lists/partial
+          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
