--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,6 +34,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
+      - name: Cache Docker Layers
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: /home/runner/.docker/buildx/
+          key: ${{ runner.os }}-buildx-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Cache Apt Packages
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: |
+            /var/cache/apt/archives/*.deb
+            /var/lib/apt/lists/*
+            ! /var/lib/apt/lists/partial
+          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@5618c9fc1e675841ca52c1c6b1304f5255a905a0 # codeql-bundle-v2.19.0
         with:
