--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -105,8 +105,11 @@ jobs:
           else
             git commit -m "FILESIZE: $FILESIZE bytes"
             git pull origin main
-            git push origin main
-            echo "Changes committed and pushed successfully."
+            git push origin main || {
+              echo "Push failed. Creating a pull request..."
+              gh pr create --title "Automated Pull Request" --body "This pull request was automatically created because the push to main failed."
+            }
+            echo "Changes committed and pushed successfully (or pull request created)."
           fi
 
       - name: Repository Dispatch
