--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -42,7 +42,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/generate-pdfs.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
