--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -54,7 +54,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/package-repo.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
