--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -85,6 +85,7 @@ jobs:
       - name: Configure DVC
         run: |
           dvc init
+          dvc config core.analytics false
           dvc config core.autostage true
           dvc config hydra.enabled true
           dvc config studio.url https://studio.iterative.ai
