--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -110,14 +110,16 @@ jobs:
             video-assets/conversion_state.json
           if git diff --staged --quiet; then
             echo "No changes detected. Skipping commit and push."
+            echo "CHANGED=false" >> $GITHUB_ENV
           else
             git commit -m "$DURATION out of 15 minutes"
-            git pull origin main
+            git pull origin main --rebase
             git push origin main || {
               echo "Push failed. Creating a pull request..."
-              gh pr create --title "Automated Pull Request" --body "This pull request was automatically created because the push to main failed."
+              gh pr create --title "Automated Video Update" --body "Push to main failed. Updated video included."
             }
             echo "Changes committed and pushed successfully (or pull request created)."
+            echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
       - name: Repository Dispatch
@@ -125,4 +127,4 @@ jobs:
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
-          event-type: create-release
+          event-type: package-delieverables
