--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -28,12 +28,12 @@ jobs:
       attestations: write
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4.2.0
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
           fetch-depth: 0
 
       - name: Cache Apt Packages
-        uses: actions/cache@v4.0.2
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: |
             /var/cache/apt/archives/*.deb
@@ -86,7 +86,7 @@ jobs:
       - name: Bump Version
         id: tag_version
         if: env.changed == 'true' || env.latest_release_tag == ''
-        uses: anothrNick/github-tag-action@1.71.0
+        uses: anothrNick/github-tag-action@f278d49d30cdd8775cc3e7dd00b5ee11686ee297 # 1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: ${{ github.event.inputs.bump_type || 'minor' }}
@@ -95,7 +95,7 @@ jobs:
 
       - name: Generate SBOM
         if: env.changed == 'true' || env.latest_release_tag == ''
-        uses: anchore/sbom-action@v0.17.2
+        uses: anchore/sbom-action@61119d458adab75f756bc0b9e4bde25725f86a7a # v0.17.2
         with:
           format: cyclonedx-json
           output-file: sbom.json
@@ -103,7 +103,7 @@ jobs:
       - name: Generate Attestations
         id: attestation
         if: env.changed == 'true' || env.latest_release_tag == ''
-        uses: actions/attest@v1.4.1
+        uses: actions/attest@67422f5511b7ff725f4dbd6fb9bd2cd925c65a8d # v1.4.1
         with:
           show-summary: true
           subject-path: |
@@ -138,7 +138,7 @@ jobs:
       - name: Release
         id: create_release
         if: env.changed == 'true' || env.latest_release_tag == ''
-        uses: softprops/action-gh-release@v2.0.8
+        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -146,9 +146,9 @@ jobs:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           generate_release_notes: true
           files: |
-            Final_Project_Team_3_Deliverable_1.pdf#${{ env.deliverable1_hash }}
-            Final_Project_Team_3_Deliverable_2.mp4#${{ env.deliverable2_hash }}
-            Final_Project_Team_3_Deliverable_3.zip#${{ env.deliverable3_hash }}
+            Final_Project_Team_3_Deliverable_1.pdf
+            Final_Project_Team_3_Deliverable_2.mp4
+            Final_Project_Team_3_Deliverable_3.zip
             sbom.json
             ${{ steps.attestation.outputs.bundle-path }}
           body_path: templates/RELEASE.md
