--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -84,8 +84,10 @@ jobs:
             echo "No changes detected. Skipping commit and push."
             echo "CHANGED=false" >> $GITHUB_ENV
           else
-            git commit -m "PAGES: ${{ env.PAGES }} | WORDS: ${{ env.WORDS }}"
+            git stash
             git pull origin main
+            git stash pop
+            git commit -m "PAGES: ${{ env.PAGES }} | WORDS: ${{ env.WORDS }}"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
               gh pr create --title "Automated PR" --body "Push to main failed. Updated PDF included."
