--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -61,8 +61,10 @@ jobs:
             echo "No changes detected. Skipping commit and push."
             echo "CHANGED=false" >> $GITHUB_ENV
           else
-            git commit -m "FILESIZE: $FILESIZE bytes"
+            git stash
             git pull origin main
+            git stash pop
+            git commit -m "FILESIZE: $FILESIZE bytes"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
               gh pr create --title "Automated Zip Update" --body "Push to main failed. Updated zip included."
