--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /home/runner/.docker/buildx/
-          key: ${{ runner.os }}-buildx-${{ hashFiles('project/.github/workflows/codacy.yml') }}
+          key: ${{ runner.os }}-buildx-${{ hashFiles('.github/workflows/codacy.yml') }}
           restore-keys: |
             ${{ runner.os }}-buildx-
 
@@ -39,7 +39,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/codacy.yml') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/codacy.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
