--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -27,7 +27,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/deploy-tts-space.yml') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/deploy-tts-space.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
