--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -35,7 +35,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/generate-pdfs.yml') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/generate-pdfs.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
