--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -49,7 +49,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/generate-video.yml') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/generate-video.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
@@ -71,7 +71,7 @@ jobs:
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('project/.github/workflows/generate-video.yml') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/generate-video.yml') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
