--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -33,7 +33,7 @@ jobs:
             /var/cache/apt/archives/*.deb
             /var/lib/apt/lists/*
             ! /var/lib/apt/lists/partial
-          key: ${{ runner.os }}-apt-${{ hashFiles('project/.github/workflows/package-deliverables.yml') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/package-deliverables.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
