--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -115,6 +115,10 @@ jobs:
             git stash
             git pull origin main
             git stash pop
+            git add \
+              Final_Project_Team_3_Deliverable_2.mp4 \
+              video-assets/Final_Project_Team_3_Deliverable_2.pdf \
+              video-assets/conversion_state.json
             git commit -m "$DURATION out of 15 minutes"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
