--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -79,8 +79,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-pipeline.txt
 
-      - uses: iterative/setup-cml@f12ea7685438c1fc438d50f77519b3860cf5fa98 # v2.0.1
-      - uses: iterative/setup-dvc@2508d098217d24eef3c0e8d7bc0ce7b9ca0723c3 # v1.1.2
+      - name: Set up CML
+        uses: iterative/setup-cml@f12ea7685438c1fc438d50f77519b3860cf5fa98 # v2.0.1
+
+      - name: Set up DVC
+        uses: iterative/setup-dvc@2508d098217d24eef3c0e8d7bc0ce7b9ca0723c3 # v1.1.2
 
       - name: Configure DVC
         run: |
