--- a/.github/workflows/codacy-analysis.yml
+++ b/.github/workflows/codacy-analysis.yml
@@ -1,12 +1,8 @@
 name: Codacy Security Scan
 
 on:
-  push:
-    branches: ["main", "develop"]
-  pull_request:
-    branches: ["main"]
   schedule:
-    - cron: "39 21 * * 0" # Run this job at 9:39 PM every Sunday
+    - cron: "0 0,12 * * *" # Run this job at 00:00 (midnight) and 12:00 (noon) every day
   workflow_dispatch:
 
 permissions:
