--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,6 +26,9 @@ jobs:
       contents: write
       id-token: write
       attestations: write
+    strategy:
+      fail-fast: false # Allow other jobs to continue even if this job fails
+      max-attempts: 3 # Retry the job up to 3 times
     steps:
       - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -91,9 +94,17 @@ jobs:
                 }
               ]
             }
+          continue-on-error: true
+
+      - name: Check Attestation Status
+        if: ${{ failure() && steps.attestation.outcome == 'failure' }}
+        run: |
+          echo "Attestation failed. Retrying..."
+          exit 1 # Fail the step to trigger retry
 
       - name: Release
         id: create_release
+        if: ${{ success() || steps.attestation.outcome == 'success' }}
         uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -110,6 +121,7 @@ jobs:
           body_path: templates/RELEASE.md
 
       - name: Print Release Outputs
+        if: steps.create_release.outcome == 'success'
         run: |
           echo "Release URL: ${{ steps.create_release.outputs.url }}"
           echo "Release ID: ${{ steps.create_release.outputs.id }}"
