--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,8 +27,10 @@ jobs:
       id-token: write
       attestations: write
     strategy:
-      fail-fast: false # Allow other jobs to continue even if this job fails
-      max-attempts: 3 # Retry the job up to 3 times
+      matrix:
+        os: [ubuntu-latest]
+        max-attempts: [3]
+      fail-fast: false
     steps:
       - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
