--- a/.github/workflows/codacy-analysis.yml
+++ b/.github/workflows/codacy-analysis.yml
@@ -31,10 +31,7 @@ jobs:
       - name: Cache Apt Packages
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: |
-            /var/cache/apt/archives/*.deb
-            /var/lib/apt/lists/*
-            ! /var/lib/apt/lists/partial
+          path: /var/cache/apt/archives/**.deb
           key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/codacy-analysis.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
