--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('$GITHUB_WORKFLOW_PATH') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('huggingface/spaces/openai-tts/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
