--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -1,9 +1,25 @@
 name: Package Deliverables
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - "configs/**"
+      - "dvc.yaml"
+      - "dvclive/**"
+      - "LICENSE"
+      - "notebooks/**"
+      - "params.yaml"
+      - "README.md"
+      - "reports/**"
+      - "requirements.txt"
+      - "src/**"
+      - "terraform/main.tf"
   repository_dispatch:
     types:
       - package-deliverables
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -14,12 +30,62 @@ permissions:
 
 env:
   PACKAGES: packages-packaging.txt
+  MANIFEST_FILE: manifest.json
 
 jobs:
+  check-manifest:
+    runs-on: ubuntu-latest
+    outputs:
+      manifest_changed: ${{ steps.manifest_check.outputs.manifest_changed }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        with:
+          fetch-depth: 0
+
+      - name: Cache Apt Archives
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: /var/cache/apt/archives
+          key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
+
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get --yes install --no-install-recommends $(cat ${{ env.PACKAGES }})
+
+      - name: Zip Manifest and Related Files
+        run: |
+          FILES=$(jq -r '.files[]' $MANIFEST_FILE)
+          zip manifest_files.zip $MANIFEST_FILE $FILES
+
+      - name: Compute Current Hash
+        id: compute_hash
+        run: |
+          CURRENT_HASH=$(md5sum manifest_files.zip | cut -d ' ' -f1)
+          echo "CURRENT_HASH=$CURRENT_HASH" >> $GITHUB_ENV
+
+      - name: Get Previous Hash
+        id: get_previous_hash
+        run: |
+          PREVIOUS_HASH=$(jq -r '.previous_hash // ""' $MANIFEST_FILE)
+          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
+
+      - name: Compare Hashes
+        id: manifest_check
+        run: |
+          if [ "$CURRENT_HASH" = "$PREVIOUS_HASH" ]; then
+            echo "Hashes match. Skipping package generation."
+            echo "manifest_changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "Hashes do not match. Proceeding with package generation."
+            echo "manifest_changed=true" >> $GITHUB_OUTPUT
+          fi
+
   package-repo:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    needs: check-manifest
+    if: needs.check-manifest.outputs.manifest_changed == 'true'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -38,10 +104,19 @@ jobs:
           sudo apt-get --yes install --no-install-recommends $(cat ${{ env.PACKAGES }})
 
       - name: Zip Repository
-        run: zip -r -0 $(cat manifest.txt) | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
+        run: |
+          FILES=$(jq -r '.files[]' $MANIFEST_FILE)
+          zip -r -0 $FILES | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
 
-      - name: Get File Size
-        run: echo "FILESIZE=$(stat -c%s Final_Project_Team_3_Deliverable_3.zip)" >> $GITHUB_ENV
+      - name: Get File Size and Hash
+        run: |
+          echo "FILESIZE=$(stat -c%s Final_Project_Team_3_Deliverable_3.zip)" >> $GITHUB_ENV
+          echo "FILEHASH=$(sha256sum Final_Project_Team_3_Deliverable_3.zip | awk '{print $1}')" >> $GITHUB_ENV
+
+      - name: Update manifest.json with Hash and Size
+        run: |
+          jq '.hash = "$FILEHASH" | .size = env.FILESIZE | .previous_hash = "$CURRENT_HASH"' <<< $(cat $MANIFEST_FILE) > temp_manifest.json
+          mv temp_manifest.json $MANIFEST_FILE
 
       - name: Configure Git
         run: |
@@ -51,7 +126,7 @@ jobs:
 
       - name: Push to Remote
         run: |
-          git add Final_Project_Team_3_Deliverable_3.zip
+          git add Final_Project_Team_3_Deliverable_3.zip $MANIFEST_FILE
           if git diff --staged --quiet; then
             echo "No changes detected. Skipping commit and push."
             echo "CHANGED=false" >> $GITHUB_ENV
@@ -59,8 +134,8 @@ jobs:
             git stash
             git pull origin main
             git stash pop
-            git add Final_Project_Team_3_Deliverable_3.zip
-            git commit -m "FILESIZE: $FILESIZE bytes"
+            git add Final_Project_Team_3_Deliverable_3.zip $MANIFEST_FILE
+            git commit -m "FILESIZE: $FILESIZE bytes, HASH: $FILEHASH"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
               gh pr create --title "Automated Zip Update" --body "Push to main failed. Updated zip included."
@@ -75,7 +150,7 @@ jobs:
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
-          event-type: package-deliverables
+          event-type: create-release
 
       - name: Cleanup
         if: always()
