--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -13,7 +13,7 @@ on:
       - "params.yaml"
       - "README.md"
       - "reports/**"
-      - "requirements.txt"
+      - "requirements-pipeline.txt"
       - "src/**"
       - "terraform/main.tf"
   repository_dispatch:
