--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -27,7 +27,7 @@ permissions:
   id-token: write
 
 env:
-  PACKAGES: packages-tex.txt
+  PACKAGES: packages-pptx2video.txt
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 jobs:
